[project]
name = "pizzapresence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oliverlynch", email = "oliver@millstream.com.au" }
]
requires-python = ">=3.13"
dependencies = [
    "json5>=0.12.0",
    "pypresence>=4.3.0",
    "requests>=2.32.4",
]

[project.scripts]
pizzapresence = "pizzapresence.__main__:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
